site.css
/* ... */
.date hr {
    margin: 20px auto;
    width: 30%;
    height: 1px;
    border-top: 1px solid #dadada;
    border-bottom: 1px solid #dadada;
    border-left: none;
    border-right: none;
}

/********************Our story*************************/

#our-story {
    padding-top: 100px;
    text-align: center;
}

.blocks {
    vertical-align: top;
    display: inline-block;
    max-width: 100%;
    width: calc(38% - 40px);
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
}

.aboutus {
    font-family: "PT Sans Narrow";
    font-weight: 300;
    text-align: justify;
    line-height: 1.5;
    font-size: 1.2em;
    color: #806464b5;
}

.groomeAndBride {
    display: inline-block;
    text-transform: uppercase;
    color: #8064644d;
    text-align: left;
    font-family: Timmana;
    font-size: 1.5em;
    letter-spacing: 1px;
    line-height: 0.9;
}

.oneline {
    position: relative;
    z-index: 0;
    margin: 15px auto;
    text-align: center;
}

.oneline hr {
    width: 40%;
    height: 1px;
    border-top: 1px solid #b4c2c0;
    border-bottom: none;
    border-left: none;
    border-right: none;
}

.oneline img {
    background: #fffcfc;
    padding: 0 10px;
    position: absolute;
    left: 50%;
    top: -6px;
    margin-left: -23.5px;
}

.name {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: -1px;
    font-size: 2.3em;
    color: #0e0d0d;
    font-family:  "Francois One";
}

/* **************** Responsive main and Our story*********************/

@media (max-width: 1214px) {
    .blocks {
        padding: 15px;
        margin-top: 40px;
        width: calc(40% - 30px);
    }
}

@media (max-width: 1000px) {
    #photo {
        margin-top: 48px;
        height: 500px;
        line-height: 1;
    }
    .we {
        padding-top: 30px;
        font-size: 2em;
    }
    .hrimg {
        margin: 10px auto;
    }
    .invitation {
        font-size: 6em;
    }
    .wedding {
        font-size: 2.1em;
    }
    .celebration {
        font-size: 4.5em;
        letter-spacing: 0.07em;
    }
    .date {
        font-size: 4.5em;
        letter-spacing: 0.2em;
    }
    .blocks {
        padding: 15px;
        margin-top: 40px;
        width: calc(40% - 30px);
    }
    .aboutus {
        font-size: 1em;
    }
    .groomeAndBride {
        font-size: 1em;
    }
    .name {
        font-size: 2.5em;
    }
}

@media (max-width: 814px) {
    #photo {
        margin-top: 35px;
        height: 300px;
        line-height: 1;
    }
    .we {
        padding-top: 40px;
        font-size: 2em;
    }
    .hrimg hr {
        width: 50%;
        height: 1px;
        border-top: 0.7px solid #67626230;
        border-bottom: 0.7px solid #67626230;
    }
    .hrimg {
        margin: 5px auto;
    }
    .invitation {
        font-size: 3.1em;
    }
    .wedding {
        font-size: 1.3em;
        letter-spacing: 0.2em;
    }
    .celebration {
        font-size: 2.6em;
        letter-spacing: 0.03em;
    }
    .date {
        font-size: 2.6em;
        letter-spacing: 0.16em;
    }
    .date hr {
        margin: 5px auto;
        width: 50%;
        height: 1px;
        border-top: 0.7px solid #67626230;
        border-bottom: 0.7px solid #67626230;
    }
    #our-story {
        padding-top: 70px;
    }
    .blocks {
        width: calc(100% - 30px);
        padding: 10px;
        margin-top: 15px;
    }
    .aboutus {
        font-size: 1em;
    }
    .groomeAndBride {
        font-size: 0.8em;
    }
    .name {
        font-size: 2.5em;
    }
}

/**************************photos***********************/

.blocksAlign {
    padding-top: 150px;
    text-align: center;
    width: 100%;
}

.mainWords {
    text-transform: uppercase;
    letter-spacing: -1px;
    font-size: 3.3em;
    color: #000000;
    font-family:  "Francois One";
    line-height: 0.5;
}

.linesmaller hr {
    width: 10%;
}

.linesmaller img {
    margin-left: -17.5px;
    top: -4px;
}

.gallery {
    margin: 30px 170px;
    margin-bottom: 0;
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    border: 12px solid #ffffff;
    box-shadow: 3px 2px 20px rgba(0, 0, 0, 0.34);
}

.gallery a {
    display: inline-block;
    box-sizing: border-box;
    padding: 3px;
}

.one-third {
    width: 33.33333%;
}

.one-forth {
    width: 25%;
}

.gallery a img {
    width: 100%;
}

@media (max-width: 814px) {
    .blocksAlign {
        padding-top: 80px;
    }
    .gallery {
        width: calc(100% - 10px);
        ;
        margin: 20px 5px;
        margin-bottom: 0px;
        border: 5px solid #ffffff;
        box-shadow: 3px 2px 20px rgba(0, 0, 0, 0.34);
    }
    .mainWords {
        font-size: 2em;
    }
    .linesmaller hr {
        width: 25%;
    }
    .one-third {
        width: 100%;
    }
    .one-forth {
        width: 100%;
    }
    .gallery a {
        padding: 1px;
    }
}

/**************************groomsmen*******************/

.person {
    display: flex;
    justify-content: center;
    align-items: center;
}

.positionPerson {
    margin: 0 40px;
}

.boxAbout {
    display: block;
    text-align: left;
    box-shadow: 3px 2px 20px rgba(0, 0, 0, 0.34);
    width: 500px;
}

.BoxName {
    padding: 20px;
}

.nameGroomsmenAndBridemaids {
    color:#2ab79e;
    font-size: 2.1em;
    font-family: "PT Sans Narrow";
    font-weight: bold;
    line-height: 0.5;
    letter-spacing: -1px;
}

.WhoisThisPersonForYou {
    font-size: 1.3em;
    color: #999999;
    font-family: "PT Sans Narrow";
}

.WhoisthisPerson {
    text-align: justify;
    padding: 20px;
    font-size: 1.1em;
    color: #999999;
    box-shadow: 3px 2px 20px rgba(0, 0, 0, 0.34);
    font-family: "PT Sans Narrow";
}
.lines hr {
    width: 25%;
}
.lines img {
    width: 15px;
    margin-left: -17.5px;
    top: -4px;
    padding: 0 10px;
}
/* ... */

